--- a/gradle.properties
+++ b/gradle.properties
@@ -18,8 +18,11 @@ kotlin.mpp.androidGradlePluginCompatibility.nowarn=true
 
 #Compose
 org.jetbrains.compose.experimental.uikit.enabled=true
-org.jetbrains.compose.experimental.jscanvas.enabled=true
-org.jetbrains.compose.experimental.wasm.enabled=true
+org.jetbrains.compose.experimental.jscanvas.enabled=false
+org.jetbrains.compose.experimental.wasm.enabled=false
+
+# JitPack compatibility
+kotlin.native.ignoreDisabledTargets=true
 
 
 # Maven Central
