--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,2 +1,7 @@
 jdk:
   - openjdk17
+before_install:
+  - echo "kotlin.js.compiler=legacy" >> gradle.properties
+  - echo "kotlin.native.ignoreDisabledTargets=true" >> gradle.properties
+install:
+  - ./gradlew :datetime-wheel-picker:publishToMavenLocal -PJITPACK=true -x test -x lint
