--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 #Gradle
-org.gradle.jvmargs=-Xmx2048M -Dfile.encoding=UTF-8 -Dkotlin.daemon.jvm.options\="-Xmx2048M"
+org.gradle.jvmargs=-Xmx4096M -Dfile.encoding=UTF-8 -Dkotlin.daemon.jvm.options\="-Xmx4096M"
 org.gradle.caching=true
 org.gradle.configuration-cache=true
 
@@ -18,7 +18,7 @@ kotlin.mpp.androidGradlePluginCompatibility.nowarn=true
 
 #Compose
 org.jetbrains.compose.experimental.uikit.enabled=true
-org.jetbrains.compose.experimental.jscanvas.enabled=false
+org.jetbrains.compose.experimental.jscanvas.enabled=true
 org.jetbrains.compose.experimental.wasm.enabled=false
 
 # JitPack compatibility
@@ -28,7 +28,7 @@ kotlin.native.ignoreDisabledTargets=true
 # Maven Central
 GROUP=io.github.darkokoa
 POM_ARTIFACT_ID=datetime-wheel-picker
-VERSION_NAME=1.0.5
+VERSION_NAME=1.0.6
 
 POM_NAME=DateTime Wheel Picker
 POM_INCEPTION_YEAR=2024
